<resources>
    <string name="app_name">The Shoe Store</string>
    <string name="login_name">Shoe Store: Login</string>
    <string name="email_address_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="signup">Sign Up</string>>
    <string name="welcome_name">Shoe Store: Welcome</string>
    <string name="welcome_text">Welcome to the Shoe Store. We are your number one source for shoes,
        boots, cleats, loafers, pumps, slippers, sneakers, clogs, moccasins, sandals, high heels,
        penny loafers, wing-tips and all other kinds of foot gear.  No socks.\n\nIn the next screen,
        you will learn how to add a new shoe to our inventory.  Click the button below to get started.
    </string>
    <string name="instructions">Instructions</string>
    <string name="instructions_name">Shoe Store: Instructions</string>
    <string name="add_a_shoe">Add A Shoe</string>
    <string name="instructions_text">Clicking on the button below will take you to a list of shoes in
        our inventory.  Initially, it will be empty.  You can add a shoe to the list by clicking on the
        action button with a plus sign in the listing screen.  This will take you to a form where you
        can enter the name of the shoe, the company that manufactures it, the size, and a description.\n\n
        Uploading images is not supported at this time.
    </string>
    <!-- listing screen -->
    <string name="shoe_list">The Shoe List</string>
    <string name="listing_name">Shoe Store: List of Shoes</string>
    <string name="sign_out">Sign Out</string>
    <!-- details screen -->
    <string name="details_name">Shoe Store: Add A Shoe</string>
    <string name="name_label">Name</string>
    <string name="size_label">Size</string>
    <string name="company_label">Company</string>
    <string name="images_label">Images</string>
    <string name="description_label">Description</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="no_shoes">No shoes at the moment.</string>
    <string name="by">\ by\ </string>
    <string name="size">size: </string>
</resources>
