<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools">
<!--
    Like the Welcome screen, this is very simple so I used a Linear Layout again.
-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginStart="@dimen/full_margin"
    android:layout_marginEnd="@dimen/full_margin"
    android:layout_marginBottom="@dimen/full_margin"
    android:orientation="vertical"
    tools:context=".instructions.InstructionsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline1"
        android:text="@string/app_name"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/instructions_text" />

    <Button
        android:id="@+id/instructions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:text="@string/shoe_list"
        android:textAlignment="center" />

</LinearLayout>
</layout>