<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph.xml"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.login.LoginFragment"
        android:label="@string/login_name"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:label="@string/welcome_name"
        android:name="com.udacity.shoestore.welcome.WelcomeFragment"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:label="@string/instructions_name"
        android:name="com.udacity.shoestore.instructions.InstructionsFragment"
        tools:layout="@layout/fragment_instructions" >
        <action
            android:id="@+id/action_instructionsFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/listingFragment"
        android:name="com.udacity.shoestore.listing.ListingFragment"
        android:label="@string/listing_name"
        tools:layout="@layout/fragment_listing" >
        <action
            android:id="@+id/action_listingFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.udacity.shoestore.details.DetailsFragment"
        android:label="@string/details_name"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_detailsFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/listingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
