<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--

    I have used a constraint layout for this screen because I wanted the buttons
    to be offset a bit from the email address and password fields and this seemed
    to be the easiest way to do it while remaining proportionate for different
    sized displays.

    -->

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginBottom="@dimen/full_margin"
    android:layout_marginStart="@dimen/full_margin"
    android:layout_marginEnd="@dimen/full_margin"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/login_title"
        style="@style/TextAppearance.MaterialComponents.Headline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailAddress_label"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="@dimen/quarter_margin"
        android:labelFor="@id/emailAddress_edit"
        android:text="@string/email_address_label"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/emailAddress_edit"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/quarter_margin"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/emailAddress_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emailAddress_label" />

    <TextView
        android:id="@+id/password_label"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="@dimen/quarter_margin"
        android:labelFor="@id/password_edit"
        android:text="@string/password_label"
        app:layout_constraintTop_toBottomOf="@id/emailAddress_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <EditText
        android:id="@+id/password_edit"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text=""
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password_label" />

    <Button
        android:id="@+id/login_button"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_label" />

    <TextView
        android:id="@+id/no_account_text"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/quarter_margin"
        android:text="@string/no_account"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signup_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <Button
        android:id="@+id/signup_button"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/quarter_margin"
        android:text="@string/signup"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/no_account_text"
        app:layout_constraintStart_toEndOf="@id/no_account_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>